<resources>
    <string name="app_name">Neural Network Example</string>
    <string name="input_weights">Input Weights</string>
    <string name="hidden_layer">Hidden Layer</string>
    <string name="output_weights">Output Weights</string>
    <string name="margin">Margin:</string>
    <string name="answer">Answer:</string>
    <string name="inputs">Inputs</string>
    <string name="output">Output</string>
    <string name="start_learning">Start Learning</string>
    <string name="input_one">Input one</string>
    <string name="input_two">Input two</string>
    <string name="steps">Steps:</string>
    <string name="no_of_hidden_layers"># of hidden layers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="of_hidden_nodes"># of Hidden Nodes</string>

</resources>
